tests/test118.rael.exp
Error [1:7]: Division by zero
| log 4 % 0
|       ^
